Fix layout spacing

--- a/src/assets/styles/cmps/_AppFooter.scss
+++ b/src/assets/styles/cmps/_AppFooter.scss
@@ -254,6 +254,9 @@
         }
       }
     }
+    .song-details-img {
+      height: 56px;
+    }
   }
 }
 
